GNOME Bugzilla – Bug 730383
GtkApplication: Fix two muxer-related memory leaks
Last modified: 2014-05-25 10:51:10 UTC
GtkApplication instances end up holding a ref on itself when they add themselves as "app" to the GtkActionMuxer in startup(). This leads to GtkApplications never getting finalized.
Created attachment 276788 [details] [review] GtkApplication: Fix two muxer-related memory leaks Drop the ref on the action muxer in finalize, and also make sure shutdown() tears down the muxer setup done in startup(). When GtkApplication adds itself to a muxer, it causes the muxer to take a ref on the GtkApplication. This has to be undone in shutdown() to make sure the GtkApplication doesn't end up holding a ref on itself.
Looks right to me, but lets see what Ryan says
Review of attachment 276788 [details] [review]: Please go ahead. Thanks for the catch.
Thanks! Attachment 276788 [details] pushed as 750f6b9 - GtkApplication: Fix two muxer-related memory leaks